update kerapihan gambar

--- a/bootsrap.html
+++ b/bootsrap.html
@@ -28,8 +28,8 @@
 
    
     .card-img-top {
-  height: 350px;       /* kasih lebih tinggi biar gambar ga kepotong parah */
-  object-fit: cover;   /* tetap rapi, isi penuh */
+  height: 350px;      
+  object-fit: cover;   
 }
 
   </style>
